@@ -1,6 +1,6 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.001002
+1.002000
 
 1.001001 2014-08-15T21:17:00Z
 
